--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">Rise</string>
     <string name="title_activity_show_base_image">ShowBaseImageActivity</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_fragment_demo">FragmentDemoActivity</string>
     <string name="title_activity_lottery_launch">LotteryLaunchActivity</string>
+    <string name="is_ssq_default_notice">双色球加奖了，两亿元大派送！</string>
+    <string name="is_user_loginned_test">您好：132632***** \n余额：100.00元</string>
 </resources>
